[gd_scene load_steps=3 format=3 uid="uid://b5gdyi2p0l424"]

[ext_resource type="Script" path="res://Scripts/Menu/Menu.gd" id="1_6mr1i"]
[ext_resource type="PackedScene" uid="uid://brquw0d8ma77b" path="res://Scenes/UI/MainGame.tscn" id="2_5lmq2"]

[node name="MainMenu" type="Node"]
script = ExtResource("1_6mr1i")
oneVersusOne = ExtResource("2_5lmq2")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DirectConnect" type="VBoxContainer" parent="UI"]
offset_right = 253.0
offset_bottom = 40.0

[node name="Options" type="HBoxContainer" parent="UI/DirectConnect"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/DirectConnect/Options"]
layout_mode = 2
text = "Direct"

[node name="Host" type="Button" parent="UI/DirectConnect/Options"]
layout_mode = 2
text = "Host"

[node name="Connect" type="Button" parent="UI/DirectConnect/Options"]
layout_mode = 2
text = "Connect"

[node name="Remote" type="LineEdit" parent="UI/DirectConnect/Options"]
layout_mode = 2
text = "localhost"
expand_to_text_length = true

[connection signal="pressed" from="UI/DirectConnect/Options/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="UI/DirectConnect/Options/Connect" to="." method="_on_connect_pressed"]
